# Investing_with_Competing_AI_Agent

./: .env.example  .gitignore  PLAN.md  README.md  plan2.md  requirements.txt  start.bat
backend/: pyproject.toml  tmp_research_verify.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/broker/: base.py  mock.py  moomoo_adapter.py
backend/app/core/: config.py
backend/app/db/: migrations.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: api.py
backend/app/services/: dashboard_stream.py  quotes.py  research.py  trading.py
backend/app/strategy/: engine.py
backend/app/web/: app.js  index.html  styles.css
backend/moomoo_picks_trader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_bootstrap.py
docs/: cloudflare-private-access.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: Sparkline.tsx  StatCard.tsx  StatusPill.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ArenaPage.tsx  PortfolioPage.tsx  ResearchPage.tsx  SystemPage.tsx  TradesPage.tsx
scripts/: build_plan_pdf.py  import-backend-env.ps1  reset-db.ps1  run-backend.ps1  run-cloudflare-tunnel.ps1  run-remote-ui.ps1  setup-backend.ps1
