[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moomoo-picks-trader"
version = "0.1.0"
description = "Local AI agent trading arena and execution service for moomoo OpenAPI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "sqlalchemy>=2.0.38,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]
moomoo = [
  "moomoo-api>=9.4.5408,<11.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

